--- a/Sitecore.GeoIpNDeviceDetection.Extended/packages.config
+++ b/Sitecore.GeoIpNDeviceDetection.Extended/packages.config
@@ -1,9 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DeviceDetector.NET" version="3.9.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Sitecore.Analytics.Model.NoReferences" version="8.2.171121" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Analytics.NoReferences" version="8.2.171121" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.CES.DeviceDetection.NoReferences" version="8.2.171121" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Kernel.NoReferences" version="8.2.171121" targetFramework="net452" developmentDependency="true" />
+  <package id="YamlDotNet" version="4.3.0" targetFramework="net452" />
 </packages>
